Creo struttura header con altezze fisse
uso la regola di debug per crearmi la struttura dell'header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
 </head>
 
 
-<body>
-  <header id="site_header"></header>
+<body class="debug">
+  <div class="bk_top">
+    <header id="site_header" class="">
+      <div class="container">
+        <nav class="clearfix">
+          <div class="logo"></div>
+          <div class="link">
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+          </div>
+          <div class="login"></div>
+        </nav>
+      </div>
+  </div>
+    <!-- /.container -->
+  </header>
   <!-- /#site_header -->
 
   <main id="site_main"></main>
