--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
     <header id="site_header" class="">
       <div class="container">
         <nav class="clearfix">
-          <div class="logo"></div>
-          <div class="link">
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+          <div class="logo">
+            <img src="./img/logo.svg" alt="Logo Discord">
           </div>
-          <div class="login"></div>
+
+          <div class="link">
+            <a href="">Scarica</a>
+            <a href="">Perchè Discord</a>
+            <a href="">Nitro</a>
+            <a href="">Sicurezza</a>
+            <a href="">Assistenza</a>
+          </div>
+            
+          <div class="login">
+            <a href="">Accedi</a>
+          </div>
         </nav>
       </div>
   </div>
