Fix dimensioni ed errori position section to_talk

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
 
-  <body class="debug">
+  <body class="">
     <div class="bk_top">
       <header id="site_header" class="">
         <div class="container">
@@ -29,7 +29,7 @@
               <a href="">Assistenza</a>
             </div>
 
-            <div class="login clearfix">
+            <div class="login">
               <a href="" class="button">Accedi</a>
             </div>
           </nav>
