Creo la Struttura della prima sezione del main

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
 
-  <body class="">
+  <body class="debug">
     <div class="bk_top">
       <header id="site_header" class="">
         <div class="container">
@@ -49,11 +49,17 @@
         <!-- /.central -->
       </section>
     </div>
-    <!-- /.container -->
+    <!-- /.bk_top -->
+   
 
-    
-
-    <main id="site_main"></main>
+    <main id="site_main">
+      <div class="bk_section">
+        <section class="container clearfix">
+          <div class="col_left"></div>
+          <div class="col_right"></div>
+        </section>
+      </div>
+    </main>
     <!-- /#site_main -->
 
     <footer id="site_footer"></footer>
