Completo section_1 e inserisco i contenuti

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
 
-  <body class="debug">
+  <body class="">
     <div class="bk_top">
       <header id="site_header" class="">
         <div class="container">
@@ -54,9 +54,14 @@
 
     <main id="site_main">
       <div class="bk_section">
-        <section class="container clearfix">
-          <div class="col_left"></div>
-          <div class="col_right"></div>
+        <section class="section_1 container clearfix">
+          <div class="col_left">
+            <img src="./img/item1.svg" alt="rana seduta che legge">
+          </div>
+          <div class="col_right">
+            <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+            <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+          </div>
         </section>
       </div>
     </main>
