--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           </div>
         </section>
       </div>
+      <img class="onda" src="./img/wave.svg" alt="">
     </main>
     <!-- /#site_main -->
 
