--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
 
-  <body class="">
+  <body class="debug">
     <div class="bk_top">
       <header id="site_header" class="">
         <div class="container">
@@ -70,9 +70,8 @@
               giornata senza intasare una chat di gruppo.</p>
           </div>
         </section>
-        <div class="onda">
-          <img src="./img/wave.svg" alt="">
-        </div>
+        <img class="onda" src="./img/wave.svg" alt="">
+
       </div>
       <!-- /.bk_section_1 -->
       <div class="bk_section_2">
@@ -87,16 +86,14 @@
           </div>
           <div class="col_right">
             <img src="./img/item2.svg" alt="mago che saluta">
-
           </div>
         </section>
 
       </div>
       <!-- /.bk_section_2 -->
       <div class="bk_section_3 same">
-        <div class="onda_reverse">
-          <img src="./img/wave.svg" alt="">
-        </div>
+        <img class="onda_reverse" src="./img/wave.svg" alt="">
+
         <section class="section_3 container clearfix">
           <div class="col_left">
             <img src="./img/item3.svg" alt="esempi chat">
@@ -108,9 +105,8 @@
               membri poteri speciali, crea canali privati, e molto altro.</p>
           </div>
         </section>
-        <div class="onda">
-          <img src="./img/wave.svg" alt="">
-        </div>
+        <img class="onda" src="./img/wave.svg" alt="">
+
       </div>
       <!-- /.bk_section_3 -->
 
@@ -118,10 +114,13 @@
         <section class="section_4 container clearfix">
           <div class="top">
             <h2>Tecnologia affidabile per tenersi in contatto</h2>
-            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+            <p>Video e audio a bassa latenza ti faranno sentire come se foste
+              tutti nella stessa stanza. Fai ciao in video, guarda gli amici
+              giocare in streaming, o riunitevi in una sessione di disegno con
+              la condivisione schermo.</p>
           </div>
           <div class="middle">
-           <img src="./img/item4-big.svg" alt="">
+            <img src="./img/item4-big.svg" alt="">
           </div>
           <div class="bottom">
             <div class="star">
@@ -137,7 +136,22 @@
     </main>
     <!-- /#site_main -->
 
-    <footer id="site_footer"></footer>
+    <footer id="site_footer">
+      <div class="bk_footer">
+        <div class="container ">
+          <div class="top_footer clearfix">
+            <div class="col_left"></div>
+            <div class="col_right"></div>
+            <div class="col_right"></div>
+            <div class="col_right"></div>
+            <div class="col_right"></div>
+          </div>
+          <div class="bottom_footer">
+        </div>
+
+        </div>
+      </div>
+    </footer>
     <!-- /#site_footer -->
   </body>
 </html>
