--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
     <link rel="stylesheet" href="./style.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
 
-  <body class="debug">
+  <body class="">
     <div class="bk_top">
       <header id="site_header" class="">
         <div class="container">
@@ -70,7 +70,7 @@
               giornata senza intasare una chat di gruppo.</p>
           </div>
         </section>
-        <img class="onda" src="./img/wave.svg" alt="">
+        <img class="onda" src="./img/wave.svg" alt="onda">
 
       </div>
       <!-- /.bk_section_1 -->
@@ -105,7 +105,7 @@
               membri poteri speciali, crea canali privati, e molto altro.</p>
           </div>
         </section>
-        <img class="onda" src="./img/wave.svg" alt="">
+        <img class="onda" src="./img/wave.svg" alt="onda">
 
       </div>
       <!-- /.bk_section_3 -->
@@ -140,14 +140,72 @@
       <div class="bk_footer">
         <div class="container ">
           <div class="top_footer clearfix">
-            <div class="col_left"></div>
-            <div class="col_right"></div>
-            <div class="col_right"></div>
-            <div class="col_right"></div>
-            <div class="col_right"></div>
+            <div class="col_left">
+              <h4>Il tuo posto per parlare</h4>
+              <div class="lenguage">
+                <img src="./img/ita.png" alt=""> 
+                italiano
+              </div>
+
+              <div class="mini_loghi">
+               <a href=""><i class="fa-brands fa-facebook"></i></a>
+              </div>
+              
+            </div>
+
+            <div class="col_right">
+              <h5>Prodotto</h5>
+              <ul>
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Perchè Discord</a></li>
+                <li><a href="">Nitro</a></li>
+                <li><a href="">Sicurezza</a></li>
+                <li><a href="">Assistenza</a></li>
+              </ul>
+            </div>
+            <div class="col_right">
+              <h5>Compagnia</h5>
+              <ul>
+                <li><a href=""> Chi siamo</a></li>
+                <li><a href=""> Lavora con noi</a></li>
+                <li><a href=""> Marchio</a></li>
+                <li><a href="">Redazione</a></li>
+                <li><a href="">Negozio</a></li>
+              </ul>
+            </div>
+            <div class="col_right">
+              <h5>Risorse</h5>
+              <ul>
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Perchè Discord</a></li>
+                <li><a href="">Nitro</a></li>
+                <li> <a href="">Sicurezza</a></li>
+                <li> <a href="">Assistenza</a></li>
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Perchè Discord</a></li>
+                <li><a href="">Nitro</a></li>
+                <li> <a href="">Sicurezza</a></li>
+                <li> <a href="">Assistenza</a></li>
+                <li> <a href="">Assistenza</a></li>
+              </ul>
+            </div>
+            <div class="col_right">
+              <h5>Risorse</h5>
+              <ul>
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Perchè Discord</a></li>
+                <li><a href="">Nitro</a></li>
+                <li> <a href="">Sicurezza</a></li>
+                <li> <a href="">Assistenza</a></li>
+              </ul>
+            </div>
           </div>
           <div class="bottom_footer">
-        </div>
+            <div class="logo_down">
+              <img src="./img/logo.svg" alt="">
+              <a href="" class="button">Registrati</a>
+            </div>
+          </div>
 
         </div>
       </div>
