Aggiungo le icone social e effeti button

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Discord</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 
@@ -32,7 +31,7 @@
           </div>
 
           <div class="login">
-            <a href="" class="button">Accedi</a>
+            <a href="" class="button white">Accedi</a>
           </div>
         </nav>
       </div>
@@ -47,9 +46,9 @@
           amici che vuole passare il tempo assieme, Discord rende più facile
           chiacchierare ogni giorno e ritrovarsi più spesso.</p>
         <div class="download_browser">
-          <a href="" class="button"> <span id="freccia">&downarrow;</span>
+          <a href="" class="button white"> <span id="freccia"><i class="fas fa-long-arrow-alt-down"></i></span>
             Scarica per Mac</a>
-          <a href="" class="button">Apri Discord nel tuo browser</a>
+          <a href="" class="button black">Apri Discord nel tuo browser</a>
         </div>
       </div>
       <!-- /.central -->
@@ -128,7 +127,7 @@
           <div class="star">
             <h3>Pronto a iniziare la tua avventura?</h3>
           </div>
-          <a href="" class="button"> <span id="freccia">&downarrow;</span>
+          <a href="" class="button"> <span id="freccia"><i class="fas fa-long-arrow-alt-down"></i></span>
             Scarica per Mac
           </a>
 
@@ -147,10 +146,14 @@
             <div class="lenguage">
               <img src="./img/ita.png" alt="">
               italiano
+              <i class="fas fa-angle-down"></i>
             </div>
 
             <div class="mini_loghi">
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+              <a href=""><i class="fab fa-instagram"></i>  </a>  
+              <a href=""><i class="fab fa-facebook"></i></a>
+              <a href=""><i class="fab fa-youtube"></i></a>
             </div>
 
           </div>
@@ -204,8 +207,8 @@
         </div>
         <div class="bottom_footer">
           <div class="logo_down">
-            <img src="./img/logo.svg" alt="">
-            <a href="" class="button">Registrati</a>
+           <a href=""><img src="./img/logo.svg" alt=""></a>           
+           <a href="" class="button">Registrati</a>
           </div>
         </div>
 
